--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "01_band_name_server",
+  "name": "02_Chat_server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -18,7 +18,7 @@
     "express-validator": "^6.10.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.2",
-    "socket.io": "^3.1.2"
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
